--- a/src/assets/index.less
+++ b/src/assets/index.less
@@ -1,6 +1,6 @@
 @pagination-prefix-cls: rc-pagination;
-@primary-color: #D1AD79;
-@pagination-item-bg: #0E483A;
+@primary-color: #d1ad79;
+@pagination-item-bg: #0e483a;
 @pagination-item-size: 28px;
 @pagination-item-size-sm: 24px;
 @pagination-font-family: Arial;
@@ -102,12 +102,12 @@
 
       &:focus,
       &:hover {
-        border-color: #D1AD79;
+        border-color: #d1ad79;
       }
 
       &:focus a,
       &:hover a {
-        color: #D1AD79;
+        color: #d1ad79;
       }
     }
   }
